# chatdot

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
src/: main.cpp  test.cpp
src/models/: chatmodel.cpp  chatmodel.h  imagemodel.cpp  imagemodel.h  settingsmodel.cpp  settingsmodel.h
src/services/: apiservice.cpp  apiservice.h  llmservice.cpp  llmservice.h  localmodelservice.cpp  localmodelservice.h  logger.cpp  logger.h  ollamaservice.cpp  ollamaservice.h
src/themes/: chat_bubbles.css  dark.qss  light.qss  system.qss  theme.cpp  theme.h
src/utils/: encryption.h  markdownparser.h
src/viewmodels/: chatviewmodel.cpp  chatviewmodel.h  settingsviewmodel.cpp  settingsviewmodel.h
src/views/: mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h
